--- a/mod01/public/index.html
+++ b/mod01/public/index.html
@@ -7,11 +7,12 @@
   <title>Instalando e usando TS</title>
 </head>
 <body>
-  <h1>Soma</h1>
-    <input type="number" name="" id="numberOne">
-    <input type="number" name="" id="numberTwo">
-    <button type="button" id="button">somar</button>
-
+    <div>
+      <h1>Soma</h1>
+      <input type="number" name="" id="numberOne">
+      <input type="number" name="" id="numberTwo">
+      <button type="button" id="button">somar</button>
+    </div>
     <div id="result"></div>
   <script src="./script.js"></script>
 </body>
