--- a/mod02/index.html
+++ b/mod02/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Módulo 02</title>
-</head>
-<body>
-  <h1>Módulo 02</h1>
-  <script src="tiposPrimitivos.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Módulo 02</title>
+  </head>
+  <body>
+    <h1 id="h1">Módulo 02</h1>
+    <script src="tiposPrimitivos.js"></script>
+  </body>
 </html>
